Refactor `CurrentSongHudWidget` to use `Color` for background color config, replace manual clamping with `Math.clamp`, and simplify background color application.